--- a/ui/src/style/addProduct.css
+++ b/ui/src/style/addProduct.css
@@ -7,4 +7,10 @@
 }
 .add-product-form-title {
   text-align: center;
+  font-size: 30px;
+  font-weight: bolder;
+}
+.form-label {
+  font-weight: bold;
+  font-size: large;
 }
